	* dbmail-message.h, dbmail-message.c, check_dbmail_message.c:
	dbmail_message_get_internal_date takes a second argument to limit the
	maximum year. Newly inserted messages cannot be more than 1 + the
	current year at delivery time (closes bug #475).
	* dbmail-mailbox.c:
	Update for the max year argument.
	* user.c, maintenance.c:
	Bail out when given invalid command line args (closes bug #448).

2007-01-10  Paul J Stevens <paul@nfg.nl>

	* imap4.c:
	fix errno race
	* dbmail-imapsession.c:
	fix leakage problem partially
	* db.c:
	fix bug in db_replycache_register
	* config.in, configure, man/dbmail-sievecmd.8:
	misc updates

2007-01-01  Paul J Stevens <paul@nfg.nl>

	* modules/dbmysql.c:
	change from OPTIMIZE TABLE to ANALYZE TABLE in mysql driver during cleanup

2006-12-31  Aaron Stone  <aaron@serendipity.cx>

	* modules/authldap.c, dbmail.conf, acinclude.m4:
	Accepted ldap_initialize patch from Uemura Tetsuya.
	* dsn.c:
	Sub-domain catch-alls supported in the form @.domain (bug #452).
	* pipe.c:
	If forwards fail, report a temporary SMTP error.
	* serverchild.c:
	Removed unused variable 'serr'.

2006-12-30  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_auth.c, modules/authldap.c:
	fix return value for invalid login (closes #481)

2006-12-18  Paul J Stevens <paul@nfg.nl>

	* configure.in, configure:
	cleanup AM_CONDITIONALS after acinclude.m4 changes

2006-12-17  Paul J Stevens <paul@nfg.nl>

	* Makefile.in, config.in, configure, man/Makefile.in, modules/Makefile.in:
	rebuild configure after changes in automake files

2006-12-16  Aaron Stone  <aaron@serendipity.cx>

	* acinclude.m4:
	Fixed bug #195 fix that left AUTHLDAP and SIEVE always defined.

2006-12-16  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_server.c, db.c, test-scripts/testfetch.txt:
	fix bug #464
	
2006-12-15  Aaron Stone  <aaron@serendipity.cx>

	* pipe.c:
	Fixed parse_and_escape to handle incomplete addresses (closes bug #477)

2006-12-13  Aaron Stone  <aaron@serendipity.cx>
