@@ -53,6 +53,7 @@ DBMAIL_CHECK_GMIME
 DBMAIL_CHECK_GC
 DBMAIL_PATH_CHECK
 gl_GETOPT
+CMU_SOCKETS
 
 AM_CONDITIONAL(USE_DM_GETOPT, [test -n "$USE_DM_GETOPT"])
 AM_CONDITIONAL(WITHCHECK, [test -n "$CHECK_LIBS"])
