@@ -15,6 +15,8 @@
 	Update for the max year argument.
 	* user.c, maintenance.c:
 	Bail out when given invalid command line args (closes bug #448).
+	* configure.in, acinclude.m4:
+	Added a test for socket libraries (closes bug #489).
 
 2007-01-10  Paul J Stevens <paul@nfg.nl>
 
